--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -43,8 +43,14 @@
     </declare-styleable>
 
     <declare-styleable name="PkLayout">
-        <attr name="backgroud" format="color"/>
-        <attr name="progress" format="integer"/>
+        <attr name="backgroud" format="color" />
+        <attr name="progress" format="integer" />
+    </declare-styleable>
+
+    <!--圆形布局-->
+    <declare-styleable name="CircleRelativeLayoutLayout">
+        <attr name="background_color" format="color" />
+        <attr name="background_alpha" format="integer" />
     </declare-styleable>
 </resources>
 
