--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -58,4 +58,5 @@
     <!--展示相册图片大小-->
     <dimen name="grid_expected_size">120dp</dimen>
 
+    <dimen name="text_chat_size">12sp</dimen>
 </resources>
