--- a/app/src/main/res/layout/item_chat_msg.xml
+++ b/app/src/main/res/layout/item_chat_msg.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="15dp"
-    android:layout_marginRight="50dp"
-    android:layout_marginTop="2dp"
+    android:layout_marginLeft="5dp"
+    android:layout_marginRight="@dimen/margin_right_chat"
+    android:layout_marginTop="4dp"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/chat_text"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="2dp"
         android:maxLines="100"
-        android:textSize="16sp">
+        android:textSize="@dimen/text_chat_size">
 
     </TextView>
 
