--- a/app/src/main/res/layout/welcome_item_chat_msg.xml
+++ b/app/src/main/res/layout/welcome_item_chat_msg.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:id="@+id/ll_welcome"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginLeft="5dp"
     android:layout_marginRight="50dp"
@@ -16,6 +17,27 @@
 
     </TextView>
 
+    <LinearLayout
+        android:layout_marginTop="5dp"
+        android:id="@+id/ll_car"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_vertical"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/iv_car"
+            android:layout_width="57dp"
+            android:layout_height="26dp" />
+
+        <TextView
+            android:id="@+id/tv_car_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="6dp"
+            android:textColor="#fbfbf6"
+            android:textSize="@dimen/text_chat_size" />
+    </LinearLayout>
     <!--<RelativeLayout
         android:id="@+id/rl_car_container"
         android:layout_width="match_parent"
