--- a/app/src/main/res/layout/pop_window_gift_count_select.xml
+++ b/app/src/main/res/layout/pop_window_gift_count_select.xml
@@ -11,8 +11,8 @@
         android:layout_height="25dp"
         android:gravity="center"
         android:text="@string/gift_count_custom"
-        android:textColor="#323232"
-        android:textSize="14sp" />
+        android:textColor="#ffffff"
+        android:textSize="9sp" />
 
     <View
         android:id="@+id/view_divider"
@@ -20,7 +20,7 @@
         android:layout_height="0.5dp"
         android:layout_marginLeft="6.5dp"
         android:layout_marginRight="6.5dp"
-        android:background="@color/divider_color" />
+        android:background="#10ffffff" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recycler"
