--- a/app/src/main/res/drawable/shape_git_count_select_pop_bg.xml
+++ b/app/src/main/res/drawable/shape_git_count_select_pop_bg.xml
@@ -3,7 +3,7 @@
 
     <corners android:radius="2dp" />
     <stroke
-        android:color="#d9d9d9"
+        android:color="#f54708"
         android:width="0.5dp" />
-    <solid android:color="@color/white" />
+    <solid android:color="#2a2e36" />
 </shape>
