--- a/app/src/main/res/drawable/shape_live_house_dialog_gift_count_bg.xml
+++ b/app/src/main/res/drawable/shape_live_house_dialog_gift_count_bg.xml
@@ -6,5 +6,5 @@
         android:topLeftRadius="14.5dp" />
     <stroke
         android:width="1.5dp"
-        android:color="#20c78a" />
+        android:color="#ff6f19"/>
 </shape>
