--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -176,5 +176,6 @@
     <color name="text_color_lottery">#fe3f7e</color>
     <color name="text_color_system">#acd3ff</color>
     <color name="text_color_sendgif">#ff3312</color>
+    <color name="bg_dialog_gift_live">#902a2e36</color>
 
 </resources>
