--- a/app/src/main/res/drawable/selector_common_pager_index.xml
+++ b/app/src/main/res/drawable/selector_common_pager_index.xml
@@ -2,13 +2,13 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="true">
         <shape android:shape="oval">
-            <solid android:color="#b9b9b9" />
+            <solid android:color="#ffffff" />
         </shape>
     </item>
 
     <item>
         <shape android:shape="oval">
-            <solid android:color="#e5e5e5" />
+            <solid android:color="#40ffffff" />
         </shape>
     </item>
 
