--- a/app/src/main/res/drawable/selector_live_house_gift_bg.xml
+++ b/app/src/main/res/drawable/selector_live_house_gift_bg.xml
@@ -4,7 +4,7 @@
     <item android:state_selected="true">
         <shape>
             <corners android:radius="3dp" />
-            <stroke android:color="#20c78a" android:width="0.5dp" />
+            <stroke android:width="1dp" android:color="#ffeb00" />
         </shape>
     </item>
 
