--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -35,16 +35,9 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="270dp">
+        android:layout_height="180dp">
 
     </android.support.v4.view.ViewPager>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="0.5dp"
-        android:layout_marginEnd="15dp"
-        android:layout_marginStart="15dp"
-        android:background="#d9d9d9" />
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -88,17 +81,17 @@
                 android:layout_toRightOf="@id/tv_amount"
                 android:background="@drawable/btn_dialog_gift_recharge"
                 android:gravity="center_vertical"
-                android:paddingTop="4dp"
                 android:paddingBottom="4dp"
-                android:paddingRight="6dp"
                 android:paddingLeft="6dp"
+                android:paddingRight="6dp"
+                android:paddingTop="4dp"
                 android:text="充值>"
                 android:textColor="#fefefe"
                 android:textSize="9sp" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="29dp"
+                android:layout_height="25dp"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="25dp"
@@ -127,7 +120,8 @@
                     android:background="@drawable/shape_live_house_dialog_gift_send_btn_bg"
                     android:text="赠送"
                     android:textColor="@color/white"
-                    android:textSize="14sp" />
+                    android:textSize="12sp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
