--- a/app/src/main/res/layout/pop_window_gift_count_select.xml
+++ b/app/src/main/res/layout/pop_window_gift_count_select.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="123dp"
     android:layout_height="175dp"
-    android:background="@drawable/shape_git_count_select_pop_bg"
+    android:background="@drawable/bg_pop_live_gift"
     android:orientation="vertical">
 
     <TextView
@@ -26,6 +26,7 @@
         android:id="@+id/recycler"
         android:layout_width="123dp"
         android:layout_height="match_parent"
+        android:layout_marginBottom="3dp"
         android:overScrollMode="never" />
 
 </LinearLayout>
