--- a/app/src/main/res/layout/dialog_guard_list.xml
+++ b/app/src/main/res/layout/dialog_guard_list.xml
@@ -7,7 +7,7 @@
 
     <android.support.design.widget.TabLayout
         android:id="@+id/tab_layout"
-        style="@style/LiveHouseDialogTab"
+        style="@style/RankTab"
         android:layout_width="match_parent"
         android:layout_height="30dp"
         android:layout_marginTop="15dp">
