--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -43,28 +43,39 @@
                         android:layout_height="match_parent"
                         android:layout_toRightOf="@id/iv_host_avatar">
 
-                        <TextView
+                        <!--<TextView-->
+                        <!--android:id="@+id/tv_host_name"-->
+                        <!--android:layout_width="wrap_content"-->
+                        <!--android:layout_height="wrap_content"-->
+                        <!--android:layout_marginLeft="6dp"-->
+                        <!--android:layout_marginTop="3dp"-->
+                        <!--android:layout_marginRight="6dp"-->
+                        <!--android:ellipsize="middle"-->
+                        <!--android:maxEms="6"-->
+                        <!--android:singleLine="true"-->
+                        <!--android:textColor="@color/white"-->
+                        <!--android:textSize="10sp" />-->
+                        <com.whzl.mengbi.ui.widget.view.MarqueeTextView
                             android:id="@+id/tv_host_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
                             android:layout_marginTop="3dp"
-                            android:ellipsize="middle"
-                            android:maxEms="6"
+                            android:layout_marginRight="6dp"
                             android:singleLine="true"
                             android:textColor="@color/white"
                             android:textSize="10sp" />
+
 
                         <TextView
                             android:id="@+id/tv_fans_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentBottom="true"
-                            android:layout_marginBottom="2dp"
                             android:layout_marginLeft="6dp"
-                            android:layout_marginRight="6dp"
                             android:layout_marginTop="6.5dp"
+                            android:layout_marginRight="6dp"
+                            android:layout_marginBottom="2dp"
                             android:singleLine="true"
                             android:textColor="@color/white"
                             android:textSize="10sp" />
@@ -74,28 +85,17 @@
                         android:id="@+id/btn_follow"
                         android:layout_width="45dp"
                         android:layout_height="match_parent"
-                        android:layout_margin="4dp"
                         android:layout_centerVertical="true"
+                        android:layout_margin="4dp"
                         android:layout_marginRight="1dp"
                         android:layout_toRightOf="@id/rl_host_info"
-                        android:text="关注"
+                        android:background="@drawable/shape_live_follow_button"
                         android:gravity="center"
-                        android:textSize="13sp"
+                        android:text="关注"
                         android:textColor="#323232"
-                        android:background="@drawable/shape_live_follow_button" />
+                        android:textSize="13sp" />
 
                 </RelativeLayout>
-
-                <android.support.v7.widget.RecyclerView
-                    android:id="@+id/audience_recycler"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:layout_toLeftOf="@id/tv_popularity"
-                    android:layout_toRightOf="@id/rl_anchor_info"
-                    android:layout_marginLeft="8dp">
-
-                </android.support.v7.widget.RecyclerView>
-
 
                 <TextView
                     android:id="@+id/tv_popularity"
@@ -103,12 +103,27 @@
                     android:layout_height="31dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp"
                     android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
                     android:background="@drawable/shape_live_display_populartity_bg"
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textSize="9sp" />
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginLeft="11dp"
+                    android:layout_toLeftOf="@id/tv_popularity"
+                    android:layout_toRightOf="@id/rl_anchor_info">
+
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/audience_recycler"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true" />
+                </RelativeLayout>
 
             </RelativeLayout>
 
@@ -123,14 +138,14 @@
                     android:id="@+id/tv_contribute"
                     android:layout_width="wrap_content"
                     android:layout_height="25dp"
+                    android:layout_centerVertical="true"
                     android:background="@drawable/shape_live_display_contribution_btn_bg"
-                    android:drawableRight="@drawable/live_display_arrow"
                     android:drawableLeft="@drawable/live_display_cup"
+                    android:drawableRight="@drawable/live_display_arrow"
                     android:drawablePadding="6dp"
                     android:gravity="center"
                     android:paddingLeft="9dp"
                     android:paddingRight="9dp"
-                    android:layout_centerVertical="true"
                     android:text="@string/live_display_contribution"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
@@ -139,32 +154,33 @@
                     android:id="@+id/rl_guard_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/tv_contribute"
-                    android:layout_marginLeft="6dp">
+                    android:layout_marginLeft="6dp"
+                    android:layout_toRightOf="@id/tv_contribute">
 
                     <ImageView
                         android:layout_width="33dp"
                         android:layout_height="28dp"
                         android:src="@drawable/live_display_guard_num" />
+
                     <TextView
+                        android:id="@+id/tv_guard_count"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="233"
-                        android:textSize="5sp"
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
                         android:paddingBottom="5dp"
-                        android:textColor="@color/white"/>
+                        android:textColor="@color/white"
+                        android:textSize="5sp" />
                 </RelativeLayout>
-                
+
                 <FrameLayout
                     android:id="@+id/frame_supercar_track"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:visibility="gone"
-                    android:layout_marginLeft="5dp"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/rl_guard_number"></FrameLayout>
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/rl_guard_number"
+                    android:visibility="gone" />
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -178,11 +194,11 @@
                         android:id="@+id/tv_run_way_gift"
                         android:layout_width="1000dp"
                         android:layout_height="20dp"
-                        android:singleLine="true"
                         android:layout_marginLeft="5dp"
                         android:layout_marginBottom="2dp"
                         android:gravity="center_vertical"
-                        android:textSize="12sp"/>
+                        android:singleLine="true"
+                        android:textSize="12sp" />
                 </android.support.constraint.ConstraintLayout>
 
                 <ImageView
@@ -190,9 +206,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:visibility="gone"
                     android:layout_toLeftOf="@id/frame_supercar_track"
-                    android:src="@drawable/live_display_rocket"/>
+                    android:src="@drawable/live_display_rocket"
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <com.whzl.mengbi.ui.widget.view.RatioRelativeLayout
@@ -274,10 +290,10 @@
                         android:layout_alignParentBottom="true"
                         android:background="#702d2933"
                         android:gravity="center_vertical"
-                        android:paddingBottom="3dp"
                         android:paddingLeft="7dp"
-                        android:paddingRight="7dp"
                         android:paddingTop="2dp"
+                        android:paddingRight="7dp"
+                        android:paddingBottom="3dp"
                         android:singleLine="true"
                         android:textSize="12sp"
                         android:visibility="gone" />
@@ -321,17 +337,17 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:layout_marginRight="7dp"
-                    android:layout_marginTop="9dp" />
+                    android:layout_marginTop="9dp"
+                    android:layout_marginRight="7dp" />
 
                 <android.support.v4.view.ViewPager
-                    android:background="@drawable/bg_liveweb"
                     android:id="@+id/vp_activity"
                     android:layout_width="61dp"
                     android:layout_height="108dp"
-                    android:layout_alignParentRight="true"
                     android:layout_below="@id/banner"
+                    android:layout_alignParentRight="true"
                     android:layout_marginTop="5dp"
+                    android:background="@drawable/bg_liveweb"
                     android:visibility="gone" />
             </RelativeLayout>
         </LinearLayout>
@@ -367,10 +383,10 @@
                 android:id="@+id/view_message_notify"
                 android:layout_width="6dp"
                 android:layout_height="6dp"
-                android:layout_alignRight="@id/btn_chat_private"
                 android:layout_alignTop="@id/btn_chat_private"
-                android:layout_marginRight="9dp"
+                android:layout_alignRight="@id/btn_chat_private"
                 android:layout_marginTop="9dp"
+                android:layout_marginRight="9dp"
                 android:background="@drawable/shape_red_notify"
                 android:visibility="gone" />
 
@@ -389,37 +405,37 @@
                 android:id="@+id/btn_share"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:background="@null"
-                android:scaleType="centerCrop"
-                android:layout_toLeftOf="@id/btn_close"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="6dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_live_share"/>
+                android:layout_toLeftOf="@id/btn_close"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_live_share"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/btn_more"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:background="@null"
-                android:scaleType="centerCrop"
-                android:layout_toLeftOf="@id/btn_share"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="6dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_live_more"/>
+                android:layout_toLeftOf="@id/btn_share"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_live_more"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/btn_free_gift"
                 android:layout_width="31dp"
                 android:layout_height="33dp"
-                android:background="@null"
-                android:scaleType="centerCrop"
-                android:layout_toLeftOf="@id/btn_more"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="6dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_live_free_gift"/>
+                android:layout_toLeftOf="@id/btn_more"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_live_free_gift"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/btn_send_gift"
@@ -438,10 +454,10 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginBottom="50dp"
-        android:layout_marginRight="12dp">
+        android:layout_alignParentBottom="true"
+        android:layout_marginRight="12dp"
+        android:layout_marginBottom="50dp">
 
         <ImageButton
             android:id="@+id/btn_treasure_box"
@@ -456,8 +472,8 @@
             android:layout_width="11dp"
             android:layout_height="11dp"
             android:layout_alignRight="@id/btn_treasure_box"
-            android:layout_marginRight="4dp"
             android:layout_marginTop="4dp"
+            android:layout_marginRight="4dp"
             android:background="@drawable/shape_red_notify"
             android:gravity="center"
             android:text="1"
