--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -74,15 +74,15 @@
                         android:id="@+id/btn_follow"
                         android:layout_width="45dp"
                         android:layout_height="match_parent"
-                        android:layout_margin="4dp"
                         android:layout_centerVertical="true"
+                        android:layout_margin="4dp"
                         android:layout_marginRight="1dp"
                         android:layout_toRightOf="@id/rl_host_info"
-                        android:text="关注"
+                        android:background="@drawable/shape_live_follow_button"
                         android:gravity="center"
-                        android:textSize="13sp"
+                        android:text="关注"
                         android:textColor="#323232"
-                        android:background="@drawable/shape_live_follow_button" />
+                        android:textSize="13sp" />
 
                 </RelativeLayout>
 
@@ -90,9 +90,9 @@
                     android:id="@+id/audience_recycler"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="8dp"
                     android:layout_toLeftOf="@id/tv_popularity"
-                    android:layout_toRightOf="@id/rl_anchor_info"
-                    android:layout_marginLeft="8dp">
+                    android:layout_toRightOf="@id/rl_anchor_info">
 
                 </android.support.v7.widget.RecyclerView>
 
@@ -103,8 +103,8 @@
                     android:layout_height="31dp"
                     android:layout_alignParentRight="true"
                     android:layout_centerVertical="true"
-                    android:layout_marginRight="4dp"
                     android:layout_marginLeft="4dp"
+                    android:layout_marginRight="4dp"
                     android:background="@drawable/shape_live_display_populartity_bg"
                     android:gravity="center"
                     android:textColor="@color/white"
@@ -123,14 +123,14 @@
                     android:id="@+id/tv_contribute"
                     android:layout_width="wrap_content"
                     android:layout_height="25dp"
+                    android:layout_centerVertical="true"
                     android:background="@drawable/shape_live_display_contribution_btn_bg"
-                    android:drawableRight="@drawable/live_display_arrow"
                     android:drawableLeft="@drawable/live_display_cup"
                     android:drawablePadding="6dp"
+                    android:drawableRight="@drawable/live_display_arrow"
                     android:gravity="center"
                     android:paddingLeft="9dp"
                     android:paddingRight="9dp"
-                    android:layout_centerVertical="true"
                     android:text="@string/live_display_contribution"
                     android:textColor="@color/white"
                     android:textSize="12sp" />
@@ -139,32 +139,33 @@
                     android:id="@+id/rl_guard_number"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/tv_contribute"
-                    android:layout_marginLeft="6dp">
+                    android:layout_marginLeft="6dp"
+                    android:layout_toRightOf="@id/tv_contribute">
 
                     <ImageView
                         android:layout_width="33dp"
                         android:layout_height="28dp"
                         android:src="@drawable/live_display_guard_num" />
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="233"
-                        android:textSize="5sp"
                         android:layout_alignParentBottom="true"
                         android:layout_centerHorizontal="true"
                         android:paddingBottom="5dp"
-                        android:textColor="@color/white"/>
+                        android:text="233"
+                        android:textColor="@color/white"
+                        android:textSize="5sp" />
                 </RelativeLayout>
-                
+
                 <FrameLayout
                     android:id="@+id/frame_supercar_track"
                     android:layout_width="match_parent"
                     android:layout_height="20dp"
-                    android:visibility="gone"
-                    android:layout_marginLeft="5dp"
                     android:layout_centerVertical="true"
-                    android:layout_toRightOf="@id/rl_guard_number"></FrameLayout>
+                    android:layout_marginLeft="5dp"
+                    android:layout_toRightOf="@id/rl_guard_number"
+                    android:visibility="gone"></FrameLayout>
 
                 <android.support.constraint.ConstraintLayout
                     android:layout_width="match_parent"
@@ -178,11 +179,11 @@
                         android:id="@+id/tv_run_way_gift"
                         android:layout_width="1000dp"
                         android:layout_height="20dp"
-                        android:singleLine="true"
-                        android:layout_marginLeft="5dp"
                         android:layout_marginBottom="2dp"
+                        android:layout_marginLeft="5dp"
                         android:gravity="center_vertical"
-                        android:textSize="12sp"/>
+                        android:singleLine="true"
+                        android:textSize="12sp" />
                 </android.support.constraint.ConstraintLayout>
 
                 <ImageView
@@ -190,9 +191,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
-                    android:visibility="gone"
                     android:layout_toLeftOf="@id/frame_supercar_track"
-                    android:src="@drawable/live_display_rocket"/>
+                    android:src="@drawable/live_display_rocket"
+                    android:visibility="gone" />
             </RelativeLayout>
 
             <com.whzl.mengbi.ui.widget.view.RatioRelativeLayout
@@ -293,6 +294,37 @@
                     android:textStyle="bold"
                     android:visibility="gone" />
 
+                <LinearLayout
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/ll_enter"
+                    android:layout_width="255dp"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginBottom="20dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    android:padding="5dp"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:scaleType="fitEnd"
+                        android:id="@+id/iv_enter_car"
+                        android:layout_width="64dp"
+                        android:layout_height="40dp" />
+
+                    <com.whzl.mengbi.ui.widget.view.RollTextView
+                        android:id="@+id/tv_enter"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@drawable/bg_chat_normal"
+                        android:ellipsize="marquee"
+                        android:marqueeRepeatLimit="1"
+                        android:padding="5dp"
+                        android:singleLine="true"
+                        android:textColor="#ffffff"
+                        android:textSize="12sp" />
+                </LinearLayout>
+
             </com.whzl.mengbi.ui.widget.view.RatioRelativeLayout>
 
 
@@ -325,13 +357,13 @@
                     android:layout_marginTop="9dp" />
 
                 <android.support.v4.view.ViewPager
-                    android:background="@drawable/bg_liveweb"
                     android:id="@+id/vp_activity"
                     android:layout_width="61dp"
                     android:layout_height="108dp"
                     android:layout_alignParentRight="true"
                     android:layout_below="@id/banner"
                     android:layout_marginTop="5dp"
+                    android:background="@drawable/bg_liveweb"
                     android:visibility="gone" />
             </RelativeLayout>
         </LinearLayout>
@@ -389,37 +421,37 @@
                 android:id="@+id/btn_share"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:background="@null"
-                android:scaleType="centerCrop"
-                android:layout_toLeftOf="@id/btn_close"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="6dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_live_share"/>
+                android:layout_toLeftOf="@id/btn_close"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_live_share"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/btn_more"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:background="@null"
-                android:scaleType="centerCrop"
-                android:layout_toLeftOf="@id/btn_share"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="6dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_live_more"/>
+                android:layout_toLeftOf="@id/btn_share"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_live_more"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/btn_free_gift"
                 android:layout_width="31dp"
                 android:layout_height="33dp"
-                android:background="@null"
-                android:scaleType="centerCrop"
-                android:layout_toLeftOf="@id/btn_more"
                 android:layout_centerVertical="true"
                 android:layout_marginRight="6dp"
-                android:visibility="gone"
-                android:src="@drawable/ic_live_free_gift"/>
+                android:layout_toLeftOf="@id/btn_more"
+                android:background="@null"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_live_free_gift"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/btn_send_gift"
