--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -318,7 +318,6 @@
                     android:layout_marginBottom="20dp"
                     android:gravity="center_horizontal"
                     android:orientation="vertical"
-                    android:padding="5dp"
                     android:visibility="gone">
 
                     <ImageView
@@ -328,13 +327,13 @@
                         android:layout_height="40dp" />
 
                     <com.whzl.mengbi.ui.widget.view.RollTextView
+                        android:gravity="center_vertical"
                         android:id="@+id/tv_enter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/bg_chat_normal"
                         android:ellipsize="marquee"
                         android:marqueeRepeatLimit="1"
-                        android:padding="5dp"
+                        android:padding="10dp"
                         android:singleLine="true"
                         android:textColor="#ffffff"
                         android:textSize="12sp" />
