--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -55,16 +55,14 @@
                         <!--android:singleLine="true"-->
                         <!--android:textColor="@color/white"-->
                         <!--android:textSize="10sp" />-->
-                        <com.whzl.mengbi.ui.widget.view.MarqueeTextView
+                        <com.whzl.mengbi.ui.widget.view.AutoScrollTextView3
                             android:id="@+id/tv_host_name"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
+                            android:layout_width="50dp"
+                            android:layout_height="13dp"
                             android:layout_marginLeft="6dp"
                             android:layout_marginTop="3dp"
                             android:layout_marginRight="6dp"
-                            android:singleLine="true"
-                            android:textColor="@color/white"
-                            android:textSize="10sp" />
+                            android:textSize="11sp"/>
 
 
                         <TextView
