--- a/app/src/main/res/drawable/shape_progressbar_mini.xml
+++ b/app/src/main/res/drawable/shape_progressbar_mini.xml
@@ -1,32 +1,27 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
-    <item
-        android:id="@android:id/background"
-        >
+    <item android:id="@android:id/background">
         <clip>
             <shape>
-                <solid android:color="#3c64ed"></solid>
+                <solid android:color="#2DA8EE"></solid>
             </shape>
 
         </clip>
     </item>
-    <item
-        android:id="@android:id/secondaryProgress"
-        >
+    <item android:id="@android:id/secondaryProgress">
         <clip>
             <shape>
-                <solid android:color="#3c64ed"></solid>
+                <solid android:color="#2DA8EE"></solid>
             </shape>
-
         </clip>
     </item>
-    <item
-        android:id="@android:id/progress"
-        >
+    <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#f3570e"></solid>
+                <solid android:color="#FF4676"></solid>
+                <corners
+                    android:topLeftRadius="10dp"
+                    android:bottomLeftRadius="10dp"/>
             </shape>
-
         </clip>
     </item>
 </layer-list>
