--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -325,13 +325,13 @@
                         android:layout_width="64dp"
                         android:layout_height="40dp" />
 
-                    <TextView
+                    <com.whzl.mengbi.ui.widget.view.RoyalEnterView
+                        android:paddingLeft="10dp"
                         android:id="@+id/tv_enter"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:gravity="center_vertical"
-                        android:padding="6dp"
-                        android:singleLine="true"
+                        android:maxLines="1"
                         android:textColor="#ffffff"
                         android:textSize="12sp" />
                 </LinearLayout>
